provarAnt/00D190000000ZY2EAM/objects/Billing_Item__c.object
<CustomObject>
    <description>These are billing items for products to be included on a contract. [HAYSTAK]</description>
    <fields>
        <fullName>Accounting_Notes__c</fullName>
        <description>Add accounting notes.[HAYSTAK]</description>
        <inlineHelpText>Add accounting notes.</inlineHelpText>
        <label>Accounting Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <description>Action for that billing item. [HAYSTAK]</description>
        <inlineHelpText>Choose action for that billing item.</inlineHelpText>
        <label>Action</label>
        <picklist>
            <picklistValues>
                <fullName>Add</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Modify</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STOP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Locked</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Alt_Description_Alert__c</fullName>
        <description>These notes are displayed on the customer&apos;s invoice.</description>
        <inlineHelpText>These notes are displayed on the customer&apos;s invoice.</inlineHelpText>
        <label>Alt Description Alert</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_Now__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked send billing for this item now.</description>
        <inlineHelpText>Check to have item billed now.</inlineHelpText>
        <label>Bill Now</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bill_Period_Code__c</fullName>
        <description>Required if Recurring Flag = “BP”. Here the cutoff date is configured in the RMB bill period schedule</description>
        <label>Bill Period Code</label>
        <picklist>
            <picklistValues>
                <fullName>FUTUREM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAST-MON</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAST-Q</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANNUAL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bill_To_Dealer__c</fullName>
        <formula>Contract__r.Bill_To_Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill To Dealer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Start_Date__c</fullName>
        <description>When to begin billing this item.</description>
        <inlineHelpText>Enter date to start billing for this product item.</inlineHelpText>
        <label>Billing Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Billing_Start_Day__c</fullName>
        <formula>DAY( Billing_Start_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Start Day</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Billing_Status__c</fullName>
        <description>Haystak</description>
        <label>Billing Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bypass_Deferral__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypass Deferral</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cancel_Reason__c</fullName>
        <description>The reason this biliing item was cancelled.</description>
        <label>Cancel Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Brand compliancy/OEM Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cutting Expenses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealership Closed/Sold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Did Not Receive Functionality That Was Expected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lack of Communication/Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partial/Reduction of Service(s)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Performance Related Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Too Expensive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Went w/Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billed in Error by Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Correction</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Change_type__c</fullName>
        <description>Reason for changing this field.</description>
        <label>Change type</label>
        <picklist>
            <picklistValues>
                <fullName>Stop Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Billing Start Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Add</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Add One Time Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add Recurring Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Implementation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementation Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bill Travel Expenses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flip Record to Locked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flip Record to Add</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flip Record to Modify</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_Status__c</fullName>
        <formula>TEXT(Contract__r.Status)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <formula>TEXT(Contract__r.Contract_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Billing Items</relationshipLabel>
        <relationshipName>Billing_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Dealer__c</fullName>
        <formula>Contract__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <description>Required if Recurring Flag = “FR”. Here the contract anniversary date is used as the cutoff or end date of the bill period</description>
        <inlineHelpText>Required if Recurring Flag = “FR”. Here the contract anniversary date is used as the cutoff or end date of the bill period</inlineHelpText>
        <label>Frequency</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Description__c</fullName>
        <formula>Product_Sold__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ordered_By__c</fullName>
        <label>Ordered By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Potential_ProRated_Revenue__c</fullName>
        <description>Formula field that takes (Total Price/30 days) * (30-billing start day)</description>
        <formula>(Total_Price__c /30)* (30- Billing_Start_Day__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula field that takes (Total Price/30 days) * (30-billing start day)</inlineHelpText>
        <label>Potential Pro-rated Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <formula>Product_Sold__r.ProductCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Sold__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Sold</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Billing Items (Product Sold)</relationshipLabel>
        <relationshipName>Billing_Items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Status__c</fullName>
        <formula>IF( Product_Sold__r.IsActive = True , &quot;Active&quot;, &quot;Cancelled&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Quantity of this item. [HAYSTAK]</description>
        <inlineHelpText>Enter quantity of this item.</inlineHelpText>
        <label>Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reason_for_Change__c</fullName>
        <label>Reason for Change</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Recurring_Flag__c</fullName>
        <description>FR means that the invoice periods will start on the contract start date and the Frequency value will dictate the invoice period e.g. monthly 
BP = invoice period will start on the date defined/configured in RMB as part of the Bill Period.</description>
        <inlineHelpText>FR means that the invoice periods will start on the contract start date and the Frequency value will dictate the invoice period e.g. monthly 
BP = invoice period will start on the date defined/configured in RMB as part of the Bill Period.</inlineHelpText>
        <label>Recurring Flag</label>
        <picklist>
            <picklistValues>
                <fullName>FR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sale_Price__c</fullName>
        <description>Sales price of the item [Haystak]</description>
        <inlineHelpText>Sales price of the item</inlineHelpText>
        <label>Sale Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Technology_Fee__c</fullName>
        <label>Technology Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Price__c</fullName>
        <formula>Quantity__c *  Sale_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Billing Item</label>
    <nameField>
        <displayFormat>LI-{0000000}</displayFormat>
        <label>Billing Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>